<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">


    <ImageView
        android:paddingTop="24dp"
        android:id="@+id/watermark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/x"
        android:src="@drawable/xicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plusjakartasans"
        android:text="@string/welcome"
        android:textColor="#4280EF"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/watermark"
        app:layout_constraintEnd_toEndOf="@+id/watermark"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/watermark"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plusjakartasans"
        android:text="@string/lets_get_started"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/watermark"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toTopOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.31" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/downimage"
        android:src="@drawable/r"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/plusjakartasans"
        android:text="@string/existing_customer_get_started"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.203"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_marginBottom="232dp"
        android:background="@drawable/custom_button_rec"
        android:fontFamily="@font/plusjakartasans"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/exit" />

    <TextView
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/plusjakartasans"
        android:text="@string/new_customer"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/exit"
        app:layout_constraintTop_toTopOf="@+id/sign" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/plusjakartasans"
        android:text="@string/create_new_account"
        android:textColor="#4280EF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/news"
        app:layout_constraintTop_toTopOf="@+id/sign" />
</androidx.constraintlayout.widget.ConstraintLayout>