<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@color/white"
    android:paddingTop="24dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/backicon"
        app:title="Back"
        app:titleTextColor="#2C2C2C"
        android:fontFamily="@font/plusjakartasans"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_ins"
        android:textColor="#4280EF"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="123dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/plusjakartasans"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_log_in_into_your_account"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="186dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/plusjakartasans"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="270dp"
        android:fontFamily="@font/plusjakartasans"
        android:text="@string/email"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/signinbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="#2C2C2C"
        android:padding="12dp"
        android:hint="@string/myemail_gmail_com"
        android:textColorHint="#2C2C2C"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="370dp"
        android:fontFamily="@font/plusjakartasans"
        android:text="Password"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#2C2C2C" android:background="@drawable/signinbtn"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:text="@string/forgot_password"
        android:textColor="#F78720"
        android:textSize="16sp"
        android:fontFamily="@font/plusjakartasans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/custom_button_rec"
        android:fontFamily="@font/plusjakartasans"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>